Fix expense dialog fields to not jump around

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,7 @@ body {
 .react-autosuggest__suggestion {
     list-style-type: none;
 }
+
+.vertical-scroll-area {
+    overflow-y: scroll !important;
+}
